# gumbo-parser

./: .gitignore  .gitmodules  .travis.yml  CHANGES.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Makefile.am  Makefile.in  README  README.md  THANKS  aclocal.m4  autogen.sh  configure  configure.ac  gentags.py  gumbo_parser.gyp  setup.py
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
benchmarks/: benchmark.cc
docs/html/: annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  gumbo_8h.html  gumbo_8h_source.html  index.html  structGumboAttribute.html  structGumboDocument.html  structGumboElement.html  structGumboOptions.html  structGumboOutput.html  structGumboSourcePosition.html  structGumboStringPiece.html  structGumboText.html  structGumboVector.html  struct__GumboNode.html
docs/html/search/: all_61.js  all_65.js  all_67.js  all_69.js  all_6b.js  all_6c.js  all_6d.js  all_74.js  all_76.js  classes_5f.html  classes_5f.js  classes_67.js  enums_67.js  enumvalues_67.js  files_67.js  functions_67.js  search.js  typedefs_67.js  variables_63.js  variables_64.js  variables_6e.js  variables_6f.js  variables_70.js  variables_72.js  variables_73.js  variables_75.js
docs/man/man3/: GumboAttribute.3  GumboDocument.3  GumboElement.3  GumboOptions.3  GumboOutput.3  GumboSourcePosition.3  GumboStringPiece.3  GumboText.3  GumboVector.3  _GumboNode.3  gumbo.h.3
examples/: clean_text.cc  find_links.cc  get_title.c  positions_of_class.cc  prettyprint.cc  serialize.cc  well_formed.cc
python/gumbo/: __init__.py  gumboc.py  gumboc_tags.py  gumboc_test.py  html5lib_adapter.py  html5lib_adapter_test.py  soup_adapter.py  soup_adapter_test.py
src/: arena.c  arena.h  attribute.c  attribute.h  char_ref.c  char_ref.h  char_ref.rl  error.c  error.h  gumbo.h  insertion_mode.h  parser.c  parser.h  string_buffer.c  string_buffer.h  string_piece.c  string_piece.h  string_util.h  tag.c  tag.in  tag_enum.h  tag_gperf.h  tag_perf.h  tag_sizes.h  tag_strings.h  token_type.h  tokenizer.c  tokenizer.h  tokenizer_states.h  utf8.c  utf8.h  util.c  util.h  vector.c  vector.h
tests/: CMakeLists.txt  attribute.cc  char_ref.cc  error.cc  parser.cc  string_buffer.cc  string_piece.cc  test_utils.cc  test_utils.h  tokenizer.cc  utf8.cc  vector.cc
visualc/: gumbo.vcxproj
visualc/include/: strings.h
visualc/x64/Debug/: gumbo.idb
visualc/x64/Debug/gumbo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  gumbo.lastbuildstate  lib.command.1.tlog
visualc/x64/Release/gumbo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  gumbo.lastbuildstate  lib.command.1.tlog
